# Attorney.AI

./: .env.example  .gitignore  README.md  supabase_setup.sql
backend/: config.py  llm_client.py  main.py  pyproject.toml
backend/api/: models.py
backend/api/routes/: contract.py  health.py  research.py  search.py
backend/contract/: contract_pipeline.py  nli_checker.py
backend/ingestion/: chunker.py  courtlistener.py  ecfr.py  govinfo.py  metadata_schema.py  pipeline.py
backend/rag/: classifier.py  generator.py  legal_ner.py  pipeline.py  query_rewriter.py  summarizer.py  verifier.py
backend/retrieval/: bm25_store.py  embedder.py  hybrid_retriever.py  local_embedder.py  reranker.py  supabase_store.py  vector_store.py
frontend/: index.html  package.json
frontend/src/: index.css
