[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attorney-ai-backend"
version = "0.1.0"
description = "Attorney.AI — Citation-first legal research RAG assistant"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Configuration ────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # ── LLM + Embeddings ─────────────────────────────────
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",

    # ── RAG / LlamaIndex ─────────────────────────────────
    "llama-index>=0.10.40",
    "llama-index-llms-openai>=0.1.22",
    "llama-index-embeddings-openai>=0.1.10",
    "llama-index-vector-stores-qdrant>=0.2.8",

    # ── Vector Database ───────────────────────────────────
    "qdrant-client>=1.9.0",

    # ── BM25 / Keyword Search ────────────────────────────
    "rank-bm25>=0.2.2",
    "elasticsearch>=8.13.0",

    # ── Reranker ─────────────────────────────────────────────────────────
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",

    # ── HuggingFace Transformers ──────────────────────────────────────────
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",

    # ── Document Processing ───────────────────────────────
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",

    # ── Data + Utils ─────────────────────────────────────
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "rich>=13.7.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
]
eval = [
    "datasets>=2.19.1",
    "evaluate>=0.4.2",
    "scikit-learn>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
